@@ -123,6 +123,7 @@
     <Compile Include="ViewModels\DefaultViewLocator.cs" />
     <Compile Include="ApplicationModel\ApplicationModelExtensions.cs" />
     <Compile Include="ViewModels\DefaultViewModelFactory.cs" />
+    <Compile Include="ViewModels\NotFoundView.cs" />
     <Compile Include="ViewModels\ViewModelExtensions.cs" />
     <Compile Include="ViewModels\IValidationError.cs" />
     <Compile Include="ViewModels\IValidator.cs" />
