@@ -38,6 +38,7 @@ V2 Alpha
 -Added IInputManager and DefaultInputManager for managing control focus and shortcut keys.
 -Removed support for Container Custom Lifetimes.  Caliburn itself does not use this and it can now easilty be added by developers who wish to.
 -Added TestResultEnumerator for easier unit testing of methods that return IEnumerable<IResult>
+-Added a dedicated control called NotFoundView which represents views that are not found by an IViewLocator.
 
 V1.1 Release
 -Fixed an issue in the WPF version of InteractionNode.
